<resources>
    <string name="app_name">Eggplant</string>
    <string name="bottom_navigation_title_popular">人気</string>
    <string name="bottom_navigation_title_recent">新着</string>
    <string name="tab_title_overall">総合</string>
    <string name="tab_title_general">一般</string>
    <string name="tab_title_social">世の中</string>
    <string name="tab_title_economics">政治と経済</string>
    <string name="tab_title_life">暮らし</string>
    <string name="tab_title_knowledge">学び</string>
    <string name="tab_title_technology">テクノロジー</string>
    <string name="tab_title_fun">おもしろ</string>
    <string name="tab_title_entertainment">エンタメ</string>
    <string name="tab_title_anime_and_game">アニメとゲーム</string>
    <string name="feed_mode_title_hot_entry">人気</string>
    <string name="feed_mode_title_entry_list">新着</string>
    <string name="feed_bookmark_count">%s users</string>
    <string name="preference_title_oss_license">オープンソースライセンス</string>
    <string name="preference_title_about_app">このアプリについて</string>
    <string name="preference_title_current_app_version">現在のバージョン</string>
    <string name="context_menu_title_show_bookmarks">ブックマーク一覧を表示</string>
    <string name="sort_type_title_popular">人気</string>
    <string name="sort_type_title_recent">全て</string>
    <string name="title_navigation_drawer_settings">設定</string>
    <string name="title_navigation_drawer_login">ログイン</string>
    <string name="title_activity_settings">設定</string>
    <string name="search_entry_hint">キーワードを入力</string>
    <string name="snackbar_text_error_occurred">エラーが発生しました。</string>
    <string name="snackbar_action_text_retry">再試行</string>
    <string name="snackbar_text_error_load_next_page_failed">エラーが発生しました。</string>
    <string name="text_empty_result">該当する記事がありませんでした。</string>
    <string name="search_filter_dialog_title">"検索フィルタ"</string>
    <string name="search_filter_dialog_text_sort">並び替え</string>
    <string name="search_filter_dialog_text_target">対象</string>
    <string name="search_filter_dialog_text_bookmark_count">ブックマーク数</string>
    <string name="search_filter_dialog_text_safe_search">セーフサーチ</string>
    <string name="search_filter_dialog_button_cancel">キャンセル</string>
    <string name="search_filter_dialog_button_apply">検索</string>
    <string name="search_option_sort_recent">新着順</string>
    <string name="search_option_sort_popular">人気順</string>
    <string name="search_option_target_text">本文</string>
    <string name="search_option_target_tag">タグ</string>
    <string name="search_option_target_title">タイトル</string>
    <string name="search_option_minimum_bookmark_count_one">1 user</string>
    <string name="search_option_minimum_bookmark_count_three">3 users</string>
    <string name="search_option_minimum_bookmark_count_fifty">50 users</string>
    <string name="search_option_minimum_bookmark_count_one_hundred">100 users</string>
    <string name="search_option_minimum_bookmark_count_five_hundred">500 users</string>
    <string name="title_login_activity">ログイン</string>
    <string name="description_for_cooperation_hatena">はてなにログインして連携を許可することで、Eggplantからブックマークの追加・削除などを行うことができるようになります。</string>
    <string name="button_text_for_access_to_hatena">はてなとの連携を許可する</string>
    <string name="hint_for_login_to_hatena">コードを貼り付けてください</string>
    <string name="button_text_for_login_to_hatena">はてなにログインする</string>
    <string name="failed_to_link_with_hatena">はてなとの連携に失敗しました。</string>
    <string name="failed_to_login">ログインに失敗しました。</string>
    <string name="succeeded_to_login">ログインに成功しました。</string>
</resources>
